--- a/themes/ghostwriter/layouts/partials/job.html
+++ b/themes/ghostwriter/layouts/partials/job.html
@@ -20,18 +20,20 @@
             <li>Ansible</li>
             <li>Linux</li>
             <li>Java</li>
+            <li>AWS</li>
+            <li>Azure</li> 
             <li>Spring Boot</li>
             <li>PHP</li>
             <li>Docker</li>
             <li>Kubernetes</li>
+            <li>Terraform</li>
             <li>Symfony-Framework</li>
             <li>Prometheus</li>
             <li>Grafana</li>
             <li>Jenkins</li>
             <li>Rundeck</li>
             <li>MySQL</li>
-            <li>OpenNebula</li>
-            <li>AWS</li>
+            <li>OpenNebula</li>           
             <li>Jmeter</li>
         </ul>
     </div>
@@ -42,8 +44,27 @@
         <div class="row">
             <div>
                 <p>
+                    <b>iss innovative software services GmbH</b><br>
+                    09/2019 - heute
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Senior DevOps Engineer</b>
+                </p>
+                <p>
+                    Als Teil der Balluff Gruppe erstellen wir innovative Software-Lösungen, Engineering und Services für die Zukunft der Industrie.
+                </p>
+                <p>
+                    <a href="https://www.iss-stuttgart.de/" target="_blank">www.iss-stuttgart.de</a>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <p>
                     <b>develop4edu GmbH</b><br>
-                    10/2014 - heute
+                    10/2014 - 09/2019
                 </p>
             </div>
             <div>
