Add new job description for iss

--- a/themes/ghostwriter/layouts/partials/job.html
+++ b/themes/ghostwriter/layouts/partials/job.html
@@ -53,7 +53,8 @@
                     <b>Senior DevOps Engineer</b>
                 </p>
                 <p>
-                    Als Teil der Balluff Gruppe erstellen wir innovative Software-Lösungen, Engineering und Services für die Zukunft der Industrie.
+                    Als DevOps Engineer berate ich Teams bei der Einführung von CI/CD Prozessen und arbeite aktiv an deren Umsetzung mit.
+                    Desweiteren bin ich in Kundenprojekten als Entwickler und Software-Architekt tätig. 
                 </p>
                 <p>
                     <a href="https://www.iss-stuttgart.de/" target="_blank">www.iss-stuttgart.de</a>
