Add new motivation text

--- a/themes/ghostwriter/layouts/partials/job.html
+++ b/themes/ghostwriter/layouts/partials/job.html
@@ -1,4 +1,14 @@
 
+<p>
+    Für mich ist IT mehr als ein Job, es ist <b>Leidenschaft</b>.
+</p>
+<p>
+    In fast 10 Jahren IT konnte ich weitreichende Erfahrungen als Entwickler, Architekt und Berater sammeln. 
+    Mein besonderer Fokus liegt dabei auf der Schnittstelle von der Entwicklung zum Betrieb. 
+    DevOps ist heute ein viel verwendeter Begriff. Für mich bedeutet er vor allem, Software als ganzheitliche Leistung im Team zu entwickeln.  
+    Transparenz, Lernbereitschaft, Verantwortung aber auch Fehlerkultur sind dabei wichtige Elemente. 
+    Diese Kultur möchte ich befördern, dabei selbst meine Erfahrung einbringen, aber auch jeden Tag Neues entdecken und lernen. 
+</p>
 
 <div class="flex-grid">
     <div class="col">
