Add and order tags

--- a/themes/ghostwriter/layouts/partials/job.html
+++ b/themes/ghostwriter/layouts/partials/job.html
@@ -17,11 +17,11 @@
             <li>DevOps</li>
             <li>Software-Entwicklung</li>
             <li>Software-Architektur</li>
-            <li>Domain-driven Design</li>
             <li>Infrastructure as code</li>
             <li>IT-Securtiy</li>
             <li>Projektmanagement</li>
             <li>IT-Consulting</li>
+            <li>Domain-driven Design</li>
         </ul>
     </div>
     <div class="col">
@@ -29,22 +29,24 @@
         <ul id="tech" class="tags">
             <li>Ansible</li>
             <li>Linux</li>
-            <li>Java</li>
             <li>AWS</li>
-            <li>Azure</li> 
-            <li>Spring Boot</li>
-            <li>PHP</li>
+            <li>Azure</li>
             <li>Docker</li>
             <li>Kubernetes</li>
             <li>Terraform</li>
+            <li>Spring Boot</li>
+            <li>Keycloak</li>
+            <li>Artifactory</li>
+            <li>Java</li>
+            <li>PHP</li>
+            <li>Python</li>
             <li>Symfony-Framework</li>
             <li>Prometheus</li>
             <li>Grafana</li>
             <li>Jenkins</li>
+            <li>Gitlab</li>
             <li>Rundeck</li>
-            <li>MySQL</li>
-            <li>OpenNebula</li>           
-            <li>Jmeter</li>
+            <li>MySQL</li>   
         </ul>
     </div>
 </div>
