Add breuninger as job and new talk

--- a/themes/ghostwriter/layouts/partials/job.html
+++ b/themes/ghostwriter/layouts/partials/job.html
@@ -1,180 +1,223 @@
-
+<p>Für mich ist IT mehr als ein Job, es ist <b>Leidenschaft</b>.</p>
 <p>
-    Für mich ist IT mehr als ein Job, es ist <b>Leidenschaft</b>.
-</p>
-<p>
-    In fast 10 Jahren IT konnte ich weitreichende Erfahrungen als Entwickler, Architekt und Berater sammeln. 
-    Mein besonderer Fokus liegt dabei auf der Schnittstelle von der Entwicklung zum Betrieb. 
-    DevOps ist heute ein viel verwendeter Begriff. Für mich bedeutet er vor allem, Software als ganzheitliche Leistung im Team zu entwickeln.  
-    Transparenz, Lernbereitschaft, Verantwortung aber auch Fehlerkultur sind dabei wichtige Elemente. 
-    Diese Kultur möchte ich befördern, dabei selbst meine Erfahrung einbringen, aber auch jeden Tag Neues entdecken und lernen. 
+  In fast 10 Jahren IT konnte ich weitreichende Erfahrungen als Entwickler,
+  Architekt und Berater sammeln. Mein besonderer Fokus liegt dabei auf der
+  Schnittstelle von der Entwicklung zum Betrieb. DevOps ist heute ein viel
+  verwendeter Begriff. Für mich bedeutet er vor allem, Software als
+  ganzheitliche Leistung im Team zu entwickeln. Transparenz, Lernbereitschaft,
+  Verantwortung aber auch Fehlerkultur sind dabei wichtige Elemente. Diese
+  Kultur möchte ich befördern, dabei selbst meine Erfahrung einbringen, aber
+  auch jeden Tag Neues entdecken und lernen.
 </p>
 
 <div class="flex-grid">
-    <div class="col">
-        <h3>Skills</h3>
-        <ul id="skills" class="tags">
-            <li>DevOps</li>
-            <li>Software-Entwicklung</li>
-            <li>Software-Architektur</li>
-            <li>Infrastructure as code</li>
-            <li>IT-Securtiy</li>
-            <li>Projektmanagement</li>
-            <li>IT-Consulting</li>
-            <li>Domain-driven Design</li>
-        </ul>
-    </div>
-    <div class="col">
-        <h3>Technologie</h3>
-        <ul id="tech" class="tags">
-            <li>Ansible</li>
-            <li>Linux</li>
-            <li>AWS</li>
-            <li>Azure</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>Terraform</li>
-            <li>Spring Boot</li>
-            <li>Keycloak</li>
-            <li>Artifactory</li>
-            <li>Java</li>
-            <li>PHP</li>
-            <li>Python</li>
-            <li>Symfony-Framework</li>
-            <li>Prometheus</li>
-            <li>Grafana</li>
-            <li>Jenkins</li>
-            <li>Gitlab</li>
-            <li>Rundeck</li>
-            <li>MySQL</li>   
-        </ul>
-    </div>
+  <div class="col">
+    <h3>Skills</h3>
+    <ul id="skills" class="tags">
+      <li>DevOps</li>
+      <li>Software-Entwicklung</li>
+      <li>Software-Architektur</li>
+      <li>Infrastructure as code</li>
+      <li>IT-Securtiy</li>
+      <li>Projektmanagement</li>
+      <li>IT-Consulting</li>
+      <li>Domain-driven Design</li>
+    </ul>
+  </div>
+  <div class="col">
+    <h3>Technologie</h3>
+    <ul id="tech" class="tags">
+      <li>Ansible</li>
+      <li>Linux</li>
+      <li>AWS</li>
+      <li>Azure</li>
+      <li>Docker</li>
+      <li>Kubernetes</li>
+      <li>Terraform</li>
+      <li>Spring Boot</li>
+      <li>Keycloak</li>
+      <li>Artifactory</li>
+      <li>Java</li>
+      <li>PHP</li>
+      <li>Python</li>
+      <li>Symfony-Framework</li>
+      <li>Prometheus</li>
+      <li>Grafana</li>
+      <li>Jenkins</li>
+      <li>Gitlab</li>
+      <li>Rundeck</li>
+      <li>MySQL</li>
+      <li>PostgresSQL</li>
+    </ul>
+  </div>
 </div>
 <div id="resume">
-    <h2 class="sub-headline">Berufserfahrung</h2>
-    <div>
-        <div class="row">
-            <div>
-                <p>
-                    <b>iss innovative software services GmbH</b><br>
-                    09/2019 - 12/2019
-                </p>
-            </div>
-            <div>
-                <p>
-                    <b>Senior DevOps Engineer</b>
-                </p>
-                <p>
-                    Als DevOps Engineer berate ich Teams bei der Einführung von CI/CD Prozessen und arbeite aktiv an deren Umsetzung mit.
-                    Desweiteren bin ich in Kundenprojekten als Entwickler und Software-Architekt tätig. 
-                </p>
-                <p>
-                    <a href="https://www.iss-stuttgart.de/" target="_blank">www.iss-stuttgart.de</a>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div>
-                <p>
-                    <b>develop4edu GmbH</b><br>
-                    10/2014 - 09/2019
-                </p>
-            </div>
-            <div>
-                <p>
-                    <b>Software-Entwickler / Software-Architekt / DevOps Engineer</b>
-                </p>
-                <p>
-                    Als Tochterunternehmen der Ernst Klett Verlag GmbH entwickelt develop4edu IT-Lösungen für die
-                    Bildungsbranche. Im Team übernehme ich ein breites Feld an Aufgaben mit Fokus auf Backend-Services,
-                    Hosting, DevOps Prozesse sowie Consulting und Projektleitung zu diesen Themen.
-                </p>
-                <p>Aufgabenbereiche:</p>
-                <ul>
-                    <li>Projektleitung Managed-Private-Cloud</li>
-                    <li>Konzeption und Ausschreibung einer Managed-Private-Cloud</li>
-                    <li>Aufbau und Betrieb automatisierter CI/CD Pipelines</li>
-                    <li>Implementierung von Keycloak als Identity-Provider</li>
-                    <li>Entwicklung von E-Commerce-Lösungen mit PHP/Symfony</li>
-                    <li>Requirements Engineering</li>
-                    <li>Konzeption und Durchführung von Performance-Tests</li>
-                    <li>Anwendungsmonitoring mit Graylog und Prometheus</li>
-                    <li>IT-Consulting für Fachbereiche des Verlags</li>
-                </ul>
-                <p>
-                    <a href="https://www.develop4edu.de/" target="_blank">www.develop4edu.de</a>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div>
-                <p>
-                    <b>Autonetzer GmbH</b><br>
-                    04/2013 - 10/2014
-                </p>
-            </div>
-            <div>
-                <p><b>PHP-Entwickler</b></p>
-                <p>Über Autonetzer können Privatpersonen ihr Auto an andere Privatpersonen vermieten.
-                Das Start-Up wurde Ende 2014 verkauft.</p>
-                <p>Meine Aufgabe bestand in der Weiterentwicklung der Plattform mit PHP und Symfony, Refactoring
-                    von Legacy Code und Performanceoptimierungen auf Basis meiner Bachelor-Thesis.</p>
-
-            </div>
-        </div>
-        <div class="row">
-            <div>
-                <p>
-                    <b>Autonetzer GmbH</b><br>
-                    11/2012 - 04/2013
-                </p>
-            </div>
-            <div>
-                <p><b>Bachelor Thesis</b>
-                    <br>Thema: Performance-Analyse und Optimierung von Webanwendungen am Beispiel autonetzer.de
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div>
-                <p>
-                    <b>Wichteldesign</b><br>
-                    09/2007 - 04/2016
-                </p>
-            </div>
-            <div>
-                <p>
-                    <b>Freelancer Webentwicklung</b><br>
-                    Freiberuflicher Webentwickler mit Schwerpunkt PHP und Contao
-                </p>
-            </div>
-        </div>
-
+  <h2 class="sub-headline">Berufserfahrung</h2>
+  <div>
+    <div class="row">
+      <div>
+        <p>
+          <b>E. Breuninger GmbH & Co.</b><br />
+          02/2020 - heute
+        </p>
+      </div>
+      <div>
+        <p>
+          <b>DevOps Engineer</b>
+        </p>
+        <p>
+          Als DevOps und Operations Engineer stellen mein Team und ich die
+          Kernsysteme der Entwicklungs-IT und des digitalen Produktmanagements
+          bereit. Der Fokus liegt dabei auf der automatisierten Bereitstellung
+          von Services in public und private Cloud-Plattformen.
+        </p>
+        <p>Aufgabenbereiche:</p>
+        <ul>
+          <li>
+            Aufbau und Betrieb von Prometheus als zentrale Monitoring-Plattform
+          </li>
+          <li>Bereitstellung von Infrastruktur mit Ansible und Terraform</li>
+          <li>Einführung eines Service Inventory</li>
+          <li>Entwicklung von CI/CD Prozessen nach den GitOps Prinzipien</li>
+        </ul>
+        <p>
+          <a href="https://www.breuninger.com" target="_blank"
+            >https://www.breuninger.com</a
+          >
+        </p>
+      </div>
     </div>
-
-
-    <h2 class="sub-headline">Ausbildung</h2>
-    <div class="flex-grid">
-        <div class="col">
-            <h3>Akademische Laufbahn</h3>
-            <p>
-                <b>Hochschule Reutlingen / Reutlingen University</b><br>
-                09/2009 - 07/2013 <br>
-                Medien- und Kommunikationsinformatik <br>
-                Abschluss: Bachelor of Science (1,9)
-            </p>
-            <p>
-                <b>Hochschule Esslingen</b><br>
-                09/2007 - 07/2009<br>
-                Software- und Medieninformatik <br>
-            </p>
-        </div>
-        <div class="col">
-            <h3>Weiterbildungen</h3>
-            <ul>
-                <li>IT-Projektmanagement - Projektleiter Baustein A</li>
-                <li>Führen ohne Vorgesetzter zu sein</li>
-            </ul>
-        </div>
+    <div class="row">
+      <div>
+        <p>
+          <b>iss innovative software services GmbH</b><br />
+          09/2019 - 12/2019
+        </p>
+      </div>
+      <div>
+        <p>
+          <b>Senior DevOps Engineer</b>
+        </p>
+        <p>
+          Als DevOps Engineer berate ich Teams bei der Einführung von CI/CD
+          Prozessen und arbeite aktiv an deren Umsetzung mit. Desweiteren bin
+          ich in Kundenprojekten als Entwickler und Software-Architekt tätig.
+        </p>
+        <p>
+          <a href="https://www.iss-stuttgart.de/" target="_blank"
+            >www.iss-stuttgart.de</a
+          >
+        </p>
+      </div>
     </div>
+    <div class="row">
+      <div>
+        <p>
+          <b>develop4edu GmbH</b><br />
+          10/2014 - 09/2019
+        </p>
+      </div>
+      <div>
+        <p>
+          <b>Software-Entwickler / Software-Architekt / DevOps Engineer</b>
+        </p>
+        <p>
+          Als Tochterunternehmen der Ernst Klett Verlag GmbH entwickelt
+          develop4edu IT-Lösungen für die Bildungsbranche. Im Team übernehme ich
+          ein breites Feld an Aufgaben mit Fokus auf Backend-Services, Hosting,
+          DevOps Prozesse sowie Consulting und Projektleitung zu diesen Themen.
+        </p>
+        <p>Aufgabenbereiche:</p>
+        <ul>
+          <li>Projektleitung Managed-Private-Cloud</li>
+          <li>Konzeption und Ausschreibung einer Managed-Private-Cloud</li>
+          <li>Aufbau und Betrieb automatisierter CI/CD Pipelines</li>
+          <li>Implementierung von Keycloak als Identity-Provider</li>
+          <li>Entwicklung von E-Commerce-Lösungen mit PHP/Symfony</li>
+          <li>Requirements Engineering</li>
+          <li>Konzeption und Durchführung von Performance-Tests</li>
+          <li>Anwendungsmonitoring mit Graylog und Prometheus</li>
+          <li>IT-Consulting für Fachbereiche des Verlags</li>
+        </ul>
+        <p>
+          <a href="https://www.develop4edu.de/" target="_blank"
+            >www.develop4edu.de</a
+          >
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div>
+        <p>
+          <b>Autonetzer GmbH</b><br />
+          04/2013 - 10/2014
+        </p>
+      </div>
+      <div>
+        <p><b>PHP-Entwickler</b></p>
+        <p>
+          Über Autonetzer können Privatpersonen ihr Auto an andere
+          Privatpersonen vermieten. Das Start-Up wurde Ende 2014 verkauft.
+        </p>
+        <p>
+          Meine Aufgabe bestand in der Weiterentwicklung der Plattform mit PHP
+          und Symfony, Refactoring von Legacy Code und Performanceoptimierungen
+          auf Basis meiner Bachelor-Thesis.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div>
+        <p>
+          <b>Autonetzer GmbH</b><br />
+          11/2012 - 04/2013
+        </p>
+      </div>
+      <div>
+        <p>
+          <b>Bachelor Thesis</b> <br />Thema: Performance-Analyse und
+          Optimierung von Webanwendungen am Beispiel autonetzer.de
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div>
+        <p>
+          <b>Wichteldesign</b><br />
+          09/2007 - 04/2016
+        </p>
+      </div>
+      <div>
+        <p>
+          <b>Freelancer Webentwicklung</b><br />
+          Freiberuflicher Webentwickler mit Schwerpunkt PHP und Contao
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="sub-headline">Ausbildung</h2>
+  <div class="flex-grid">
+    <div class="col">
+      <h3>Akademische Laufbahn</h3>
+      <p>
+        <b>Hochschule Reutlingen / Reutlingen University</b><br />
+        09/2009 - 07/2013 <br />
+        Medien- und Kommunikationsinformatik <br />
+        Abschluss: Bachelor of Science (1,9)
+      </p>
+      <p>
+        <b>Hochschule Esslingen</b><br />
+        09/2007 - 07/2009<br />
+        Software- und Medieninformatik <br />
+      </p>
+    </div>
+    <div class="col">
+      <h3>Weiterbildungen</h3>
+      <ul>
+        <li>IT-Projektmanagement - Projektleiter Baustein A</li>
+        <li>Führen ohne Vorgesetzter zu sein</li>
+      </ul>
+    </div>
+  </div>
 </div>
